# conda-plugin-template

./: HOW_WE_USE_GITHUB.md  README.md  ascii_graph.py  copier.yml  pyproject.toml  setup.py  string_art.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml  epic.yml
cookiecutter-template/: cookiecutter.json
cookiecutter-template/{{cookiecutter.project_slug}}/: .gitignore  README.md  develop.sh  environment.yml  pyproject.toml  requirements.dev.txt  {% if cookiecutter.use_conda_project %}conda-project.yml{% endif %}  {% if cookiecutter.use_precommit %}.pre-commit-config.yaml{% endif %}
cookiecutter-template/{{cookiecutter.project_slug}}/.github/workflows/: tests.yml
cookiecutter-template/{{cookiecutter.project_slug}}/tests/: test_placeholder.py
cookiecutter-template/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: hooks.py
copier-template/: LICENSE.jinja  README.md.jinja  environment.yml.jinja  pyproject.toml.jinja
copier-template/.github/workflows/: tests.yml.jinja
recipe/: meta.yaml  meta.yml
subcommand_plugin_examples/: README.md
subcommand_plugin_examples/c_subcommand/: README.md  setup.py
subcommand_plugin_examples/c_subcommand/recipe/: meta.yaml
subcommand_plugin_examples/c_subcommand/temp_converter/: c_to_f.c  temp_conv_c.py
subcommand_plugin_examples/c_subcommand_plugin_tutorial/: README.md  pyproject.toml  setup.py
subcommand_plugin_examples/c_subcommand_plugin_tutorial/recipe/: meta.yaml
subcommand_plugin_examples/c_subcommand_plugin_tutorial/temp_converter/: builder.py  c_to_f.c  pyproject.toml  temp_conv_c.py
subcommand_plugin_examples/conda_subcommand_plugin_tutorial/: README.md
subcommand_plugin_examples/conda_subcommand_plugin_tutorial/ascii_graph/: README.md  pyproject.toml
subcommand_plugin_examples/conda_subcommand_plugin_tutorial/recipe/: meta.yaml
subcommand_plugin_examples/python_subcommand/: README.md
subcommand_plugin_examples/python_subcommand/ascii_graph/: ascii_graph.py  setup.py
subcommand_plugin_examples/rust_subcommand/: README.md
subcommand_plugin_examples/rust_subcommand/multiply/: pyproject.toml
subcommand_plugin_examples/rust_subcommand_plugin_tutorial/: README.md
subcommand_plugin_examples/rust_subcommand_plugin_tutorial/multiply/: LICENSE  pyproject.toml  rust_plugin.py
subcommand_plugin_examples/rust_subcommand_plugin_tutorial/multiply/recipe/: meta.yaml
subcommand_plugin_examples/rust_subcommand_plugin_tutorial/multiply/src/: lib.rs
tutorials/: README.md
tutorials/post-commands/: README.md  pyproject.toml  setup.py
tutorials/post-commands/package_counter/: README.md  package_counter.py  pyproject.toml  setup.py
tutorials/post-commands/package_counter/recipe/: meta.yaml
tutorials/subcommands/: README.md
tutorials/subcommands/c/: README.md
tutorials/subcommands/c/recipe/: meta.yaml
tutorials/subcommands/c/temp_converter/: temp_conv_c.py
tutorials/subcommands/python/: README.md  ascii_graph.py  pyproject.toml
tutorials/subcommands/python/recipe/: meta.yaml
tutorials/subcommands/rust/: Cargo.toml  README.md  rust_plugin.py
tutorials/subcommands/rust/recipe/: meta.yaml
tutorials/subcommands/rust/src/: lib.rs
