[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "temp-converter"
version = "1.0"
description = "A subcommand that multiplies two ints using Rust"
requires-python = ">=3.7"
dependencies = ["conda"]

[tools.setuptools]
py_modules=["temp-converter"]

[project.entry-points.conda]
temp-converter = "temp_conv_c"
